Added agriculture graph

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="expitry_date">End Year :</string>
     <string name="contribution_gdp">Contribution To GDP</string>
     <string name="Credit">Credit</string>
-    <string name="Fertilizers">Fertilizers</string>
+    <string name="Fertilizers">Fertilizers Consumption</string>
     <string name="Fertilizer_Production">Fertilizer Production</string>
     <string name="Reserves">Annotations</string>
     <string name="GNI">Annotations</string>
